# py-simple-audio

./: MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: linux_wheel.yml  pythonpackage.yml  wheels.yml
