[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.rst"
name = "simpleaudio-patched"
version = "1.0.5"
authors = [{name = "Joe Hamilton", email = "jhamilton10@georgefox.edu"}, {name = "Harco Kuppens", email = "h.kuppens@cs.ru.nl"}]
license = {file = "LICENSE.txt"}
description = "Simple, asynchronous audio playback for Python 3."
keywords = ['audio', 'wave', 'media', 'multimedia',
          'sound', 'alsa', 'coreaudio', 'winmm', 'music']
classifiers = ['License :: OSI Approved :: MIT License',
             'Programming Language :: Python :: 3',
             'Topic :: Multimedia :: Sound/Audio',
             'Operating System :: POSIX :: Linux',
             'Operating System :: Microsoft :: Windows',
             'Operating System :: MacOS :: MacOS X']

[project.urls]
Homepage='https://github.com/harcokuppens/py-simple-audio'

[tool.setuptools.package-data]
"simpleaudio" = ["test_audio/?.wav","test_audio/notes_2_16_44.wav","test_audio/left_right.wav"]

